# pyWebExMessage

./: README.md  pyproject.toml
src/message_room/: generic_adaptive_card.j2  message_room.py  script.py
src/message_room/Template/: generic_adaptive_card.j2
